--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "remix": "^2.15.2"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.4",
